--- a/7-26042022/index.html
+++ b/7-26042022/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body onload="CarregarProdutos()">
-    <h1>Nome a ser definido</h1>
+    <h1>Cosméticos</h1>
     <Script src="js/scripts.js"></Script>
 </body>
 </html>
-<a href=""></a>
